// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register tablet slice 1`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/daily-universal-register.png",
        }
      }
    />
    <Text>
      Daily Universal Register
    </Text>
    <TileS />
    <View />
    <TileS />
    <View />
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/leaves.png",
        }
      }
    />
    <TileS />
    <View />
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/cake.png",
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`2. lead one and one tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileU
        tileName="lead"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="support"
      />
    </View>
  </View>
</View>
`;

exports[`3. lead one full width tablet slice 1`] = `
<View>
  <TileR
    tileName="lead"
  />
</View>
`;

exports[`4. lead two no pic and two tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileX
        tileName="lead1"
      />
      <View />
      <TileY
        tileName="lead2"
      />
    </View>
    <View />
    <View>
      <TileD
        tileName="support1"
      />
      <View />
      <TileZ
        tileName="support2"
      />
    </View>
  </View>
</View>
`;

exports[`5. secondary one tablet slice 1`] = `
<View>
  <TileW
    tileName="secondary"
  />
</View>
`;

exports[`6. secondary four tablet slice 1`] = `
<View>
  <View>
    <View>
      <TileC
        tileName="secondary1"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary2"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary3"
      />
    </View>
    <View />
    <View>
      <TileC
        tileName="secondary4"
      />
    </View>
  </View>
</View>
`;

exports[`7. secondary one and columnist 1`] = `
<View>
  <View>
    <View>
      <TileAA
        tileName="secondary"
      />
    </View>
    <View />
    <View>
      <TileAB
        tileName="columnist"
      />
    </View>
  </View>
</View>
`;

exports[`8. secondary two and two slice 1`] = `
<View>
  <View>
    <View>
      <View>
        <TileV
          tileName="secondary1"
        />
      </View>
      <View />
      <View>
        <TileV
          tileName="secondary2"
        />
      </View>
    </View>
    <View />
    <View>
      <View>
        <TileG
          tileName="support1"
        />
      </View>
      <View />
      <View>
        <TileG
          tileName="support2"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`9. lead one and four slice 1`] = `
<View>
  <View>
    <View>
      <TileAC
        tileName="lead"
      />
    </View>
    <View />
    <View>
      <TileAD
        tileName="support1"
      />
      <View />
      <TileAD
        tileName="support2"
      />
      <View />
      <TileAD
        tileName="support3"
      />
      <View />
      <TileAD
        tileName="support4"
      />
    </View>
  </View>
</View>
`;

exports[`10. secondary two no pic and two slice 1`] = `
<View>
  <View>
    <View>
      <TileAE
        tileName="secondary1"
      />
    </View>
    <View />
    <View>
      <TileAE
        tileName="secondary2"
      />
    </View>
  </View>
  <View />
  <View>
    <View>
      <TileG
        tileName="support1"
      />
    </View>
    <View />
    <View>
      <TileG
        tileName="support2"
      />
    </View>
  </View>
</View>
`;

exports[`11. puzzle slice 1`] = `
<View>
  <View>
    <Link
      linkStyle={
        Object {
          "flex": 1,
        }
      }
      url="/crossword/123"
    >
      <View>
        <View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Times Concise medium No 7881
          </Text>
        </View>
        <View>
          <Image
            aspectRatio={1.5}
            uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
          />
        </View>
      </View>
    </Link>
    <Link
      linkStyle={
        Object {
          "flex": 1,
        }
      }
      url="/crossword/123"
    >
      <View>
        <View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Times Concise medium No 7881
          </Text>
        </View>
        <View>
          <Image
            aspectRatio={1.5}
            uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
          />
        </View>
      </View>
    </Link>
    <Link
      linkStyle={
        Object {
          "flex": 1,
        }
      }
      url="/crossword/123"
    >
      <View>
        <View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Times Concise medium No 7881
          </Text>
        </View>
        <View>
          <Image
            aspectRatio={1.5}
            uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
          />
        </View>
      </View>
    </Link>
  </View>
</View>
`;
